@@ -1916,6 +1916,7 @@ extern void shishi_keys_remove (Shishi_keys * keys, int keyno);
 extern int shishi_keys_add (Shishi_keys * keys, Shishi_key * key);
 
 extern int shishi_keys_print (Shishi_keys * keys, FILE *fh);
+extern int shishi_keys_from_file (Shishi_keys * keys, const char *filename);
 extern int shishi_keys_to_file (Shishi * handle,
 				const char *filename,
 				Shishi_keys * keys);
