@@ -12,6 +12,12 @@ shishi_keys_to_keytab_mem.
 Typically only used by keytab format.  The functions are
 shishi_key_timestamp and shishi_key_timestamp_set.
 
+** libshishi: Add API to read several keys from a file.
+The function is shishi_keys_from_file.
+
+** keytab2shishi: Add --reverse (-R) parameter to write Keytab files.
+This allows you to use create Keytab files from your Shishi hostkeys.
+
 ** API and ABI modifications:
 shishi_key_timestamp: ADD.
 shishi_key_timestamp_set: ADD.
